1.0.0 (currently working on)
- [#3954] Fix: Use the default language as fallback for labels that are not available in the current BE language
- [#3952] Fix: Events list is empty
- [#3856] Change: Make ISO8859-15 the charset for the CSV for the CSV export and convert the data
- [#3926] Change: Refactor tx_seminars_BackEndExtJs_Ajax with Extract Subclass
- [#3839] Fix: Clarify the label for the organizer footer (thanks to Philipp Gampe)
- [#3548] Feature: Use flash messages in the BE module
- [#3930] Fix: Typo in the reference: boh -> both
- [#3920] Fix: Crash on the second registration page
- [#3910] Feature: Load records from the current page and its subpages in the grids
- [#3914] Fix: Spelling, punctuation and grammar errors and inconsistencies in manual (thanks to Christian Hennecke)
- [#3911] Change: Attached files should be combined from the topic and date record
- [#3902] Feature: Add icons for the registration, speaker and organizer records in the grids
- [#3904] Feature: Load the stores of the grids after the grid is rendered for the first time
- [#3881] Feature: Add a context menu to the organizers grid
- [#3880] Feature: Add a context menu to the speakers grid
- [#3894] Feature: Add a context menu to the registrations grid
- [#1879] Fix: Don't use &= or |= for booleans
- [#3851] Fix: CSV export for events from the BE ignores event record in subfolders
- [#3882] Feature: Respect the back-end user rights in the ExtJS back-end module
- [#3870] Change: tx_oelib_List should use an SplObjectStorage
- [#3895] Change: Make the BE module testable
- [#3893] Fix: returnUrls needs to get encoded
- [#3886] Feature: Integrate the CSV export functions
- [#3827] Feature: Use ExtJS in the back-end module
- [#3874] Fix: Test failures in the registration manager testcase
- [#3872] Feature: Add a hook for modifying the "my events" list row
- [#3877] Fix: pi1::isLoggedIn must be public