@@ -103,6 +103,8 @@
 			<!-- ###EVENT_ROW### -->
 		</tbody>
 	</table>
+
+	<p id="print-button"><button onclick="window.print(); return false;"><p>###LABEL_PRINT_BUTTON###</p></button></p>
 <!-- ###SEMINARS_EVENT_LIST### -->
 </body>
 </html>
