@@ -30,6 +30,8 @@
 			<!-- ###ORGANIZER_ROW### -->
 		</tbody>
 	</table>
+
+	<p id="print-button"><button onclick="window.print(); return false;"><p>###LABEL_PRINT_BUTTON###</p></button></p>
 <!-- ###SEMINARS_ORGANIZER_LIST### -->
 </body>
 </html>
