@@ -13,6 +13,8 @@
 		<h2>###REGISTRATIONS_HEADING###</h2>
 	<!--  ###WRAPPER_REGISTRATIONS_HEADING### -->
 	###COMPLETE_TABLE###
+
+	<p id="print-button"><button onclick="window.print(); return false;"><p>###LABEL_PRINT_BUTTON###</p></button></p>
 <!-- ###SEMINARS_REGISTRATION_LIST### -->
 </body>
 </html>
