@@ -35,6 +35,8 @@
 			<!-- ###SPEAKER_ROW### -->
 		</tbody>
 	</table>
+
+	<p id="print-button"><button onclick="window.print(); return false;"><p>###LABEL_PRINT_BUTTON###</p></button></p>
 <!-- ###SEMINARS_SPEAKER_LIST### -->
 </body>
 </html>
