@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3936] Feature: Add a "print" button and a print stylesheet to the BE module
 - [#3954] Fix: Use the default language as fallback for labels that are not available in the current BE language
 - [#3952] Fix: Events list is empty
 - [#3856] Change: Make ISO8859-15 the charset for the CSV for the CSV export and convert the data
